# Deckset-presentations

./: .gitignore  CLAUDE.md  DESIGN.md  ENHANCED_INTEGRATION.md  FIX Messaging.md  PRODUCT.md  README.md  code_highlighting_styles.css  code_processor.py  deckset_parser.py  enhanced_models.py  enhanced_processor.py  enhanced_slide_styles.css  enhanced_templates.py  file_manager.py  generator.py  main.py  markdown_renderer.py  math_processor.py  media_processor.py  models.py  package-lock.json  package.json  processor.py  pyproject.toml  scanner.py  slide_processor.py  template.html  templates.py  test_enhanced_css.html  test_integration_deckset_parser.py
.cursor/rules/: code-patterns.mdc  deckset-architecture.mdc  deckset-syntax.mdc  development-workflow.mdc  general.mdc  template-patterns.mdc  testing-conventions.mdc
.github/workflows/: generate-website.yml
.impeccable/: design.json
.kiro/steering/: python.md
02-powerpoint-karaoke/: powerpoint-karaoke.md
04-eks-deployment-101/: eks-deployment-101.md
06-mastering-auth0-with-terraform/: mastering-auth0-with-terraform.md
10 Deckset Basics/: 10 Deckset basics.md  Deckset basics.md  water.mov
20 Working with images/: Working with images.md
30 Big text/: Big text.md
40 Education/: 40 Education.md  Education.md
50 Tables/: 50 Tables.md
Code to Cloud Native/: Code to Cloud Native.md
Docker Kubernetes 101/: Docker Kubernetes 101.md
EKS Deployment 101/: EKS Deployment 101.md
FIX Messaging/: FIX Messaging.md
Mastering Auth0 with Terraform/: Mastering Auth0 with Terraform.md
RAG Workshop/: 01 RAG Introduction.md  02 Setup Environment.md  03 Ingestion.md  04 Retrieval.md  05 Put it All Together.md  06 Forward and Beyond.md
docs/: index.html
src/: enhanced_processor.py  enhanced_templates.py  generator.py  main.py  markdown_renderer.py  math_processor.py  media_processor.py  models.py  slide_processor.py  theme_compiler.py
templates/: base.html  code_highlighting_styles.css  enhanced_slide_styles.css  homepage.html  presentation.html  slide.html  slide_styles.css
templates/macros/: chrome.html  (+4 more)
tests/: __init__.py  jest.setup.js  test_booth_controls.js  test_code_processor.py  test_deckset_parser.py  test_end_to_end.py  test_enhanced_integration.py  test_enhanced_processor.py  test_enhanced_setup.py  test_enhanced_slide_viewer.js  test_enhanced_slide_viewer_final.js  test_enhanced_slide_viewer_simple.js  test_enhanced_templates.py  test_error_handling.py  test_file_manager.py  test_generator.py  test_integration.py  test_main.py  test_markdown_renderer.py  test_math_processor.py  test_media_processor.py  test_navigation_accessibility.js  test_navigation_functionality.js  test_processor.py  test_regression_site.py  test_scanner.py  test_slide_processor.py  test_slide_transitions.js  test_templates.py  test_theme_compiler.py  test_theme_contract.py  test_theme_switcher.js
(+50 files in other folders)
