[project]
name = "deckset-presentations"
version = "0.1.0"
description = "A tool for generating presentations using Markdown and Jinja2 templates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pymdown-extensions>=11.0.1",
]

[project.urls]
Homepage = "https://github.com/kevinlin/Deckset-presentations"
Repository = "https://github.com/kevinlin/Deckset-presentations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "models.py",
    "scanner.py", 
    "deckset_parser.py",
    "slide_processor.py",
    "generator.py",
    "main.py",
    "file_manager.py",
    "enhanced_processor.py",
    "enhanced_templates.py",
    "code_processor.py",
    "math_processor.py",
    "media_processor.py",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.15.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
